--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p style="color: #f1c40f; font-size: 0.9rem;">*Status: Experimental Prototype</p>
         <div class="instruksi">Ketuk untuk Lanjut ➔</div>
     </div>
-    <div class="footer">Graduate Trainee Project - Elnusa Petrofin</div>
+    <div class="footer">Graduat Trainee 2025 Expertise Project - Elnusa Petrofin</div>
 </div>
 
 <script>
@@ -241,3 +241,4 @@
 </script>
 </body>
 </html>
+
